--- a/apps/web/server/package.json
+++ b/apps/web/server/package.json
@@ -15,8 +15,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "i": "^0.3.7",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "npm": "^10.5.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
