--- a/apps/web/client/package.json
+++ b/apps/web/client/package.json
@@ -10,12 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@blocknote/core": "^0.13.2",
+    "@blocknote/mantine": "^0.13.2",
+    "@blocknote/react": "^0.13.2",
+    "@cloudinary/react": "^1.13.0",
+    "@cloudinary/url-gen": "^1.19.0",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "@sergeysova/craft": "^0.3.3",
+    "clsx": "^2.1.1",
+    "install": "^0.13.0",
+    "npm": "^10.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
     "sonner": "^1.4.41",
+    "vaul": "^0.9.1",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
