--- a/apps/web/server/package.json
+++ b/apps/web/server/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@prisma/client": "^5.10.2",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.2.0",
     "cors": "^2.8.5",
+    "datauri": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "i": "^0.3.7",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "npm": "^10.5.0",
     "ts-node-dev": "^2.0.0"
   },
@@ -28,6 +31,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.11.20",
     "nodemon": "^3.1.0",
     "prisma": "^5.10.2",
