--- a/apps/web/client/package.json
+++ b/apps/web/client/package.json
@@ -18,10 +18,13 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@sergeysova/craft": "^0.3.3",
+    "apexcharts": "^3.49.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.2.6",
     "install": "^0.13.0",
     "npm": "^10.8.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
     "sonner": "^1.4.41",
